--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,16 @@ body {
     background-color: rgb(250, 250, 250);
     border: 1px solid rgb(214, 214, 214);
     height: 800px;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Info User --> Aside Menu */
 .info-user {
     background-color: rgb(234, 234, 234);
-
+    padding: 12px;
 }
+
 .name-user {
     flex-basis: 50%;
     flex-grow: 1;
@@ -47,6 +50,7 @@ body {
 /* Notifications --> Aside Menu */
 .notifications {
     background-color: rgb(159, 216, 248);
+    padding: 12px;
 }
 
 .notifications > i {
@@ -60,15 +64,24 @@ body {
 /* Search/Input --> Aside Menu */
 .search-container {
     background-color: white;
+    margin: 8px;
+    padding: 5px;
+    padding-left: 10px;
 }
 
-
-/* Info Contact --> Main Menu */
-.info-contact-content {
+/* Contacts List --> Aside Menu */
+.contacts-container{
+    margin-right: 18px;
+    background-color: white;
     flex-basis: 50%;
     flex-grow: 1;
-}
+    box-shadow: 1px 0 2px rgb(214, 214, 214);
 
+}
+.contact-content {
+    border-bottom: 2px solid rgb(250, 250, 250);
+    padding: 12px 18px;    
+}
 
 /* Main Menu */
 .main-menu {
@@ -78,6 +91,16 @@ body {
     display: flex;
     flex-direction: column;
     height: 800px;
+}
+
+/* Info Contact --> Main Menu */
+.info-contact {
+    padding: 12px;
+
+}
+.info-contact-content {
+    flex-basis: 50%;
+    flex-grow: 1;
 }
 
 /* Chat --> Main Menu */
@@ -106,7 +129,7 @@ body {
     justify-content: flex-end;
 }
 
-/* input e icons  --> Main Menu */
+/* Input & Icons   --> Main Menu */
 .input-msg-container i {
     padding: 15px;
     font-size: 25px;
