--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ i {
 /* End utility */
 
 body {
-    background: linear-gradient(to top, rgb(215, 219, 216) 85%, rgb(66, 147, 136) 0%);
+    background: linear-gradient(to top, rgb(215, 219, 216) 80%, rgb(66, 147, 136) 0%);
+    height: 100vh;
 }
 
 .main-container {
@@ -31,9 +32,10 @@ body {
 .aside-menu {
     background-color: rgb(250, 250, 250);
     border: 1px solid rgb(214, 214, 214);
-    height: 800px;
+    height: calc(100vh - 48px);
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 /* Info User --> Aside Menu */
@@ -75,6 +77,7 @@ body {
     background-color: white;
     flex-basis: 50%;
     flex-grow: 1;
+    overflow: auto;
     box-shadow: 1px 0 2px rgb(214, 214, 214);
 
 }
@@ -90,14 +93,15 @@ body {
     border-right: none;
     display: flex;
     flex-direction: column;
-    height: 800px;
+    height: calc(100vh - 48px);
+    overflow: hidden;
 }
 
 /* Info Contact --> Main Menu */
 .info-contact {
     padding: 12px;
-
 }
+
 .info-contact-content {
     flex-basis: 50%;
     flex-grow: 1;
@@ -109,6 +113,7 @@ body {
     flex-grow: 1;
     background-image: url("../img/mine.jpg");
     border-right: 12px solid white;
+    overflow: auto;
 }
 .chat .send,
 .chat .received {
