--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@ i {
     font-size: 20px;
     margin: 5px 10px;
 }
+
+h5{
+    margin-bottom: 0;
+}
+
+.text-custom {
+    color: #888;
+    font-size: 14px;
+    font-weight: 600;
+}
 /* End utility */
 
 body {
@@ -55,6 +65,7 @@ body {
     padding: 12px;
 }
 
+
 .notifications > i {
     background-color: white;
     color: rgb(159, 216, 248);
@@ -63,12 +74,21 @@ body {
     font-size: 20px;
 }
 
+.notifications .text-custom {
+    text-decoration: underline;
+}
 /* Search/Input --> Aside Menu */
 .search-container {
     background-color: white;
     margin: 8px;
     padding: 5px;
     padding-left: 10px;
+    display: flex;
+}
+
+.search-container input {
+    flex-basis: 50%;
+    flex-grow: 1;
 }
 
 /* Contacts List --> Aside Menu */
@@ -83,7 +103,13 @@ body {
 }
 .contact-content {
     border-bottom: 2px solid rgb(250, 250, 250);
-    padding: 12px 18px;    
+    padding: 12px 18px;   
+    display: flex; 
+    align-items: flex-start;
+}
+
+.contact-content h5 {
+    margin-left: 24px;
 }
 
 /* Main Menu */
@@ -105,7 +131,9 @@ body {
 .info-contact-content {
     flex-basis: 50%;
     flex-grow: 1;
+    padding-left: 24px;
 }
+
 
 /* Chat --> Main Menu */
 .chat {
