--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,26 @@ body {
     display: flex;
     justify-content: flex-end;
 }
+.fas.fa-chevron-down {
+    font-size: 15px;
+
+}
+.options-container{
+    position: relative;
+}
+.msg-options {
+    position: absolute;
+    background-color: white;
+    right: 0;
+    width: 135px;
+    font-size: 15px;
+    color: #555;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px #999;    
+}
+.msg-options div {
+    padding: 5px 10px;
+}
 
 
 /* Input & Icons   --> Main Menu */
